--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/index.js",
   "scripts": {
     "start": "node app/index.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "author": "DevOps GPT",
   "license": "MIT",
