--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,20 +38,33 @@ jobs:
 
       - name: Push Docker image
         run: docker push $IMAGE_NAME:$IMAGE_TAG
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
+  deploy:
+    runs-on: self-hosted
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Deploy to production server
+        run: |
+          docker pull $IMAGE_NAME:$IMAGE_TAG
+          docker stop $IMAGE_NAME || true
+          docker rm $IMAGE_NAME || true
+          docker run -d --name $IMAGE_NAME -p 80:3000 $IMAGE_NAME:$IMAGE_TAG
+      - name: Notify deployment
+        run: echo "Deployment to production server completed successfully."
+    # runs-on: ubuntu-latest
+    # needs: build
+    # steps:
+    #   - name: Checkout code
+    #     uses: actions/checkout@v2
 
-  #     - name: Deploy to production server
-  #       run: |
-  #         ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-  #         docker pull $IMAGE_NAME:$IMAGE_TAG
-  #         docker stop nodejs-app || true
-  #         docker rm nodejs-app || true
-  #         docker run -d --name nodejs-app -p 80:3000 $IMAGE_NAME:$IMAGE_TAG
-  #         EOF
-  #       env:
-  #         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+    #   - name: Deploy to production server
+    #     run: |
+    #       ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+    #       docker pull $IMAGE_NAME:$IMAGE_TAG
+    #       docker stop nodejs-app || true
+    #       docker rm nodejs-app || true
+    #       docker run -d --name nodejs-app -p 80:3000 $IMAGE_NAME:$IMAGE_TAG
+    #       EOF
+    #     env:
+    #       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
