--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,17 +41,25 @@ jobs:
   deploy:
     runs-on: self-hosted
     needs: build
+    env:
+      IMAGE_NAME: mnaiem262/nodejs-app
+      IMAGE_TAG: latest
+      CONTAINER_NAME: nodejs-app
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Deploy to production server
         run: |
           docker pull $IMAGE_NAME:$IMAGE_TAG
-          docker stop $IMAGE_NAME || true
-          docker rm $IMAGE_NAME || true
-          docker run -d --name $IMAGE_NAME -p 80:3000 $IMAGE_NAME:$IMAGE_TAG
+          docker stop $CONTAINER_NAME || true
+          docker rm $CONTAINER_NAME || true
+          docker run -d --name $CONTAINER_NAME -p 80:3000 $IMAGE_NAME:$IMAGE_TAG
+
       - name: Notify deployment
-        run: echo "Deployment to production server completed successfully."
+        run: echo "🚀 Deployment to production server completed successfully."
+
     # runs-on: ubuntu-latest
     # needs: build
     # steps:
